fixing a whole bunch of broken styles after switch

--- a/src/components/Controls/_.module.css
+++ b/src/components/Controls/_.module.css
@@ -23,15 +23,16 @@
   position: relative;
 }
 .indicator::after {
+  --size: 8px;
   content: '';
   position: absolute;
-  bottom: 100%;
+  height: var(--size);
+  border-radius: calc(var(--size) / 2);
+  top: calc(calc(var(--size) / 2) * -1);
   left: 0;
   width: 100%;
-  height: 4px;
-  border-radius: 0.5rem;
-  background-color: blueviolet;
   z-index: -1;
+  background-color: blueviolet;
 }
 .card.active {
   opacity: 1;
