--- a/src/components/Layout/_.css
+++ b/src/components/Layout/_.css
@@ -4,34 +4,36 @@
   position: relative;
   grid-template-columns: 1fr auto auto;
   grid-template-rows: 1fr auto;
+}
+.layout > * {
+  transition: opacity var(--transition-duration) var(--transition-timing);
+}
+.layout #bkgd {
+  grid-column: 1 / 4;
+  grid-row: 1 / 3;
+  z-index: -1;
+}
 
-  #bkgd {
-    grid-column: 1 / 4;
-    grid-row: 1 / 3;
-    z-index: -1;
-  }
+.layout #footer {
+  grid-column: 1 / 4;
+  grid-row: 2 / 3;
+  z-index: 1;
+}
 
-  #footer {
-    grid-column: 1 / 4;
-    grid-row: 2 / 3;
-    z-index: 1;
-  }
+.layout #controls {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+  z-index: 1;
+}
 
-  #controls {
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
-    z-index: 1;
-  }
+.layout #layers {
+  grid-column: 2 / 3;
+  grid-row: 1 / 3;
+  z-index: 1;
+}
 
-  #layers {
-    grid-column: 2 / 3;
-    grid-row: 1 / 3;
-    z-index: 1;
-  }
-
-  #nav {
-    grid-column: 3 / 4;
-    grid-row: 1 / 3;
-    z-index: 1;
-  }
+.layout #nav {
+  grid-column: 3 / 4;
+  grid-row: 1 / 3;
+  z-index: 1;
 }
